--- a/scalabuff-runtime/.classpath
+++ b/scalabuff-runtime/.classpath
@@ -1,9 +1,17 @@
 <classpath>
-  <classpathentry output="bin\main" path="src\main" kind="src"></classpathentry>
-  <classpathentry output="bin\test" path="src\test" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/classes" path="src/main" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/classes" path="target/scala-2.10/src_managed/main" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/classes" path="src/main/resources" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/classes" path="target/scala-2.10/resource_managed/main" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/test-classes" path="src/test" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/test-classes" path="target/scala-2.10/src_managed/test" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/test-classes" path="src/test/resources" kind="src"></classpathentry>
+  <classpathentry output="target/scala-2.10/test-classes" path="target/scala-2.10/resource_managed/test" kind="src"></classpathentry>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
-  <classpathentry path="C:\Users\Sandro\.ivy2\cache\com.google.protobuf\protobuf-java\jars\protobuf-java-2.4.1.jar" kind="lib"></classpathentry>
-  <classpathentry path="C:\Users\Sandro\.ivy2\cache\org.scalatest\scalatest_2.9.2\jars\scalatest_2.9.2-1.8.jar" kind="lib"></classpathentry>
+  <classpathentry kind="lib" path="/Users/david/.ivy2/cache/com.google.protobuf/protobuf-java/bundles/protobuf-java-2.5.0.jar" sourcepath="/Users/david/.ivy2/cache/com.google.protobuf/protobuf-java/srcs/protobuf-java-2.5.0-sources.jar"></classpathentry>
+  <classpathentry kind="lib" path="/Users/david/.ivy2/cache/org.scalatest/scalatest_2.10/jars/scalatest_2.10-1.9.1.jar" sourcepath="/Users/david/.ivy2/cache/org.scalatest/scalatest_2.10/srcs/scalatest_2.10-1.9.1-sources.jar"></classpathentry>
+  <classpathentry kind="lib" path="/Users/david/.ivy2/cache/org.scala-lang/scala-actors/jars/scala-actors-2.10.0.jar" sourcepath="/Users/david/.ivy2/cache/org.scala-lang/scala-actors/srcs/scala-actors-2.10.0-sources.jar"></classpathentry>
+  <classpathentry kind="lib" path="/Users/david/.ivy2/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.10.0.jar" sourcepath="/Users/david/.ivy2/cache/org.scala-lang/scala-reflect/srcs/scala-reflect-2.10.0-sources.jar"></classpathentry>
   <classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"></classpathentry>
   <classpathentry path="bin" kind="output"></classpathentry>
 </classpath>
